[gd_scene load_steps=30 format=3 uid="uid://b7f7t2q76vusn"]

[ext_resource type="Script" path="res://Scripts/battle.gd" id="1_15oof"]
[ext_resource type="PackedScene" uid="uid://cke288rhj6ajb" path="res://Scenes/player.tscn" id="1_o0y0b"]
[ext_resource type="Script" path="res://Scenes/game_clock.gd" id="2_nwhn7"]
[ext_resource type="Script" path="res://Enemy/enemy_progression.gd" id="3_vtkru"]
[ext_resource type="Script" path="res://Enemy/enemy_spawner.gd" id="3_vu7ch"]
[ext_resource type="Texture2D" uid="uid://cgar40hoqirb3" path="res://Sprites/ground_05.png" id="4_85uua"]
[ext_resource type="FontFile" uid="uid://dkgglilqpmisb" path="res://Fonts/Dark Crystal Outline.ttf" id="6_qo8fj"]
[ext_resource type="Theme" uid="uid://cgcqsv5lajjoe" path="res://Themes/button_theme.tres" id="7_yqa01"]
[ext_resource type="Script" path="res://Scripts/damag_number_generator.gd" id="8_j53hx"]
[ext_resource type="PackedScene" uid="uid://b0rwu8wjsft0r" path="res://Scenes/damage_number.tscn" id="9_c4h2d"]
[ext_resource type="Script" path="res://Scripts/collectable_spawner.gd" id="10_hl0bs"]
[ext_resource type="PackedScene" uid="uid://y367tfhui5xy" path="res://Level Progression/upgrade_card.tscn" id="10_t2pd2"]
[ext_resource type="Resource" uid="uid://c4dcnq2e3bv8h" path="res://Weapon/Javelin/javelin_damage.tres" id="11_61mv1"]
[ext_resource type="PackedScene" uid="uid://bhhi2d77n1n0q" path="res://Enemy/Slug/enemy_slug.tscn" id="12_7bdsg"]
[ext_resource type="Resource" uid="uid://byc6b1hdr6t8p" path="res://Weapon/Needle/needle_damage.tres" id="12_rbpvi"]
[ext_resource type="Script" path="res://Level Progression/experience_counter.gd" id="12_rw78r"]
[ext_resource type="Resource" uid="uid://bkuau2i44ag5o" path="res://Weapon/Scythe/scythe_damage.tres" id="13_24unn"]
[ext_resource type="Resource" uid="uid://b5rey3emiwj2h" path="res://Weapon/Javelin/javelin_pierce.tres" id="14_i6bus"]
[ext_resource type="PackedScene" uid="uid://bne0tt77bveng" path="res://Collectable/Book/collectable_experience.tscn" id="15_15fmu"]
[ext_resource type="Resource" uid="uid://bqv1rcb2ap5ld" path="res://Weapon/Scythe/scythe_pierce.tres" id="15_16wql"]
[ext_resource type="Script" path="res://Level Progression/levelup_manager.gd" id="15_e3rha"]
[ext_resource type="Script" path="res://game_clock_ui.gd" id="15_gmp61"]
[ext_resource type="PackedScene" uid="uid://bly7yxln6q7rw" path="res://Collectable/Fruit/collectable_health.tscn" id="16_7rrvr"]
[ext_resource type="Resource" uid="uid://dsgtjv7qnrw47" path="res://Weapon/Needle/needle_chain.tres" id="16_bn0bs"]
[ext_resource type="PackedScene" uid="uid://btwp0o1fgllae" path="res://Weapon/Javelin/weapon_javelin.tscn" id="21_ef8p5"]
[ext_resource type="PackedScene" uid="uid://dw745sp6fja0e" path="res://Weapon/Needle/weapon_needle.tscn" id="22_8qau6"]
[ext_resource type="PackedScene" uid="uid://dniqa17jftyc5" path="res://Weapon/Scythe/weapon_scythe.tscn" id="23_kudax"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vs1f1"]
resource_name = "base"
texture = ExtResource("4_85uua")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_jpnfa"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_vs1f1")

[node name="Battle" type="Node2D"]
script = ExtResource("1_15oof")

[node name="GameClock" type="Node" parent="."]
script = ExtResource("2_nwhn7")

[node name="SecondsTimer" type="Timer" parent="GameClock"]
unique_name_in_owner = true
autostart = true

[node name="EnemyProgression" type="Node" parent="."]
script = ExtResource("3_vtkru")

[node name="EnemySpawner" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_vu7ch")
enemy_scenes = Array[PackedScene]([ExtResource("12_7bdsg")])

[node name="EnemySpawnTimer" type="Timer" parent="EnemySpawner"]
unique_name_in_owner = true
wait_time = 0.5
autostart = true

[node name="SpawnedEnemies" type="Node2D" parent="EnemySpawner"]
unique_name_in_owner = true
y_sort_enabled = true

[node name="Player" parent="." instance=ExtResource("1_o0y0b")]
unique_name_in_owner = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(960, 640)

[node name="TileMap" type="TileMap" parent="ParallaxBackground/ParallaxLayer"]
tile_set = SubResource("TileSet_jpnfa")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 65550, 0, 0, 131086, 0, 0, 196622, 0, 0, 262158, 0, 0, 327694, 0, 0, 393230, 0, 0, 458766, 0, 0, 524302, 0, 0, 589838, 0, 0, 589837, 0, 0, 589836, 0, 0, 589835, 0, 0, 589834, 0, 0, 589833, 0, 0, 589832, 0, 0, 589831, 0, 0, 589830, 0, 0, 589829, 0, 0, 589828, 0, 0, 589827, 0, 0, 589826, 0, 0, 589825, 0, 0, 589824, 0, 0, 524288, 0, 0, 458752, 0, 0, 393216, 0, 0, 327680, 0, 0, 262144, 0, 0, 196608, 0, 0, 131072, 0, 0, 65536, 0, 0, 327685, 0, 0, 262149, 0, 0, 196613, 0, 0, 131077, 0, 0, 65541, 0, 0, 65540, 0, 0, 65539, 0, 0, 65538, 0, 0, 65537, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 0, 524289, 0, 0, 524290, 0, 0, 458754, 0, 0, 393218, 0, 0, 327682, 0, 0, 262146, 0, 0, 196610, 0, 0, 131074, 0, 0, 131075, 0, 0, 196611, 0, 0, 262147, 0, 0, 327683, 0, 0, 393219, 0, 0, 458755, 0, 0, 524291, 0, 0, 524292, 0, 0, 458756, 0, 0, 393220, 0, 0, 327684, 0, 0, 262148, 0, 0, 196612, 0, 0, 131076, 0, 0, 393221, 0, 0, 458757, 0, 0, 524293, 0, 0, 524294, 0, 0, 458758, 0, 0, 393222, 0, 0, 327686, 0, 0, 262150, 0, 0, 196614, 0, 0, 131078, 0, 0, 65542, 0, 0, 65543, 0, 0, 131079, 0, 0, 196615, 0, 0, 262151, 0, 0, 327687, 0, 0, 393223, 0, 0, 458759, 0, 0, 524295, 0, 0, 524296, 0, 0, 458760, 0, 0, 393224, 0, 0, 327688, 0, 0, 262152, 0, 0, 196616, 0, 0, 131080, 0, 0, 65544, 0, 0, 65545, 0, 0, 131081, 0, 0, 196617, 0, 0, 262153, 0, 0, 327689, 0, 0, 393225, 0, 0, 458761, 0, 0, 524297, 0, 0, 524298, 0, 0, 458762, 0, 0, 393226, 0, 0, 327690, 0, 0, 262154, 0, 0, 196618, 0, 0, 131082, 0, 0, 65546, 0, 0, 65547, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 0, 0, 327691, 0, 0, 393227, 0, 0, 458763, 0, 0, 524299, 0, 0, 524300, 0, 0, 458764, 0, 0, 393228, 0, 0, 327692, 0, 0, 262156, 0, 0, 196620, 0, 0, 131084, 0, 0, 65548, 0, 0, 65549, 0, 0, 131085, 0, 0, 196621, 0, 0, 262157, 0, 0, 327693, 0, 0, 393229, 0, 0, 458765, 0, 0, 524301, 0, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LevelLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "LV: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_right = 960.0
offset_bottom = 60.0

[node name="ExperienceBar" type="ProgressBar" parent="CanvasLayer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
max_value = 200.0
step = 1.0
show_percentage = false

[node name="GameClockUI" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
script = ExtResource("15_gmp61")

[node name="MinutesLabel" type="Label" parent="CanvasLayer/VBoxContainer/GameClockUI"]
unique_name_in_owner = true
layout_mode = 2
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColonLabel" type="Label" parent="CanvasLayer/VBoxContainer/GameClockUI"]
layout_mode = 2
text = ":"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SecondsLabel" type="Label" parent="CanvasLayer/VBoxContainer/GameClockUI"]
unique_name_in_owner = true
layout_mode = 2
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameoverMenu" type="VBoxContainer" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.5
offset_top = -210.0
offset_right = 132.5
offset_bottom = -91.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="GameoverLabel" type="Label" parent="CanvasLayer/GameoverMenu"]
layout_mode = 2
theme_override_colors/font_color = Color(0.694118, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 30
theme_override_fonts/font = ExtResource("6_qo8fj")
theme_override_font_sizes/font_size = 60
text = "GameOver"

[node name="RetryButton" type="Button" parent="CanvasLayer/GameoverMenu"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme = ExtResource("7_yqa01")
text = "Retry"

[node name="LevelUpMenu" type="PanelContainer" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -220.0
offset_right = 220.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/LevelUpMenu"]
layout_mode = 2
mouse_filter = 2

[node name="UpgradeCards" type="VBoxContainer" parent="CanvasLayer/LevelUpMenu/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 20

[node name="UpgradeCard" parent="CanvasLayer/LevelUpMenu/CenterContainer/UpgradeCards" instance=ExtResource("10_t2pd2")]
visible = false
layout_mode = 2
attribute = ExtResource("11_61mv1")

[node name="UpgradeCard2" parent="CanvasLayer/LevelUpMenu/CenterContainer/UpgradeCards" instance=ExtResource("10_t2pd2")]
visible = false
layout_mode = 2
attribute = ExtResource("12_rbpvi")

[node name="UpgradeCard3" parent="CanvasLayer/LevelUpMenu/CenterContainer/UpgradeCards" instance=ExtResource("10_t2pd2")]
visible = false
layout_mode = 2
attribute = ExtResource("13_24unn")

[node name="UpgradeCard4" parent="CanvasLayer/LevelUpMenu/CenterContainer/UpgradeCards" instance=ExtResource("10_t2pd2")]
visible = false
layout_mode = 2
attribute = ExtResource("14_i6bus")

[node name="UpgradeCard5" parent="CanvasLayer/LevelUpMenu/CenterContainer/UpgradeCards" instance=ExtResource("10_t2pd2")]
visible = false
layout_mode = 2
attribute = ExtResource("15_16wql")

[node name="UpgradeCard6" parent="CanvasLayer/LevelUpMenu/CenterContainer/UpgradeCards" instance=ExtResource("10_t2pd2")]
visible = false
layout_mode = 2
attribute = ExtResource("16_bn0bs")

[node name="DamageNumberGenerator" type="Node2D" parent="."]
script = ExtResource("8_j53hx")
damage_number_scene = ExtResource("9_c4h2d")

[node name="CollectableSpawner" type="Node2D" parent="."]
script = ExtResource("10_hl0bs")
collectable_scenes = Array[PackedScene]([ExtResource("15_15fmu"), ExtResource("16_7rrvr")])

[node name="SpawnedCollectables" type="Node2D" parent="CollectableSpawner"]
unique_name_in_owner = true

[node name="ExperienceCounter" type="Node" parent="."]
script = ExtResource("12_rw78r")

[node name="LevelupManager" type="Node" parent="."]
script = ExtResource("15_e3rha")

[node name="WeaponJavelin" parent="." node_paths=PackedStringArray("player") instance=ExtResource("21_ef8p5")]
player = NodePath("../Player")

[node name="WeaponNeedle" parent="." node_paths=PackedStringArray("player") instance=ExtResource("22_8qau6")]
player = NodePath("../Player")

[node name="WeaponScythe" parent="." node_paths=PackedStringArray("player") instance=ExtResource("23_kudax")]
player = NodePath("../Player")

[connection signal="timeout" from="GameClock/SecondsTimer" to="GameClock" method="_on_second_timer_timeout"]
[connection signal="timeout" from="EnemySpawner/EnemySpawnTimer" to="EnemySpawner" method="_on_enemy_spawn_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/GameoverMenu/RetryButton" to="." method="_on_restart_button_pressed"]
